set up login, log out, sign up

--- a/PFD_Assignment/Views/Shared/_DefaultMenu.cshtml
+++ b/PFD_Assignment/Views/Shared/_DefaultMenu.cshtml
@@ -36,7 +36,7 @@
             <ul class="navbar-nav ms-auto">
                 <li class="nav-item">
                     <!-- A link for logging out user -->
-                    <a class="nav-link" href="~/Home/LogOut">Log Out</a>
+                    <a class="nav-link" href="~/Home/LoginPage">Login</a>
                 </li>
             </ul>
         </div>
