--- a/PFD_Assignment/Views/Home/Index.cshtml
+++ b/PFD_Assignment/Views/Home/Index.cshtml
@@ -1,8 +1,25 @@
 ﻿@{
-    ViewData["Title"] = "Home Page";
+    ViewData["Title"] = "Index";
 }
+<!DOCTYPE html>
+<html>
+<body>
+    <div class="home">
+        <img class="bgimg" src="~/images/sgbackground.jpg"></img>
+        <div class="content">
+            <h2 id="title" class="title">Welcome to SG Handbook</h2>
+            <p class="para">
+                description
+            </p>
 
-<div class="text-center">
-    <h1 class="display-4">Welcome</h1>
-    <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
-</div>
+        </div>
+    </div>
+</body>
+</html>
+
+@if (TempData["SuccessMessage"] != null)
+{
+    <script>
+        alert('@TempData["SuccessMessage"]');
+    </script>
+}
