--- a/PFD_Assignment/Views/Home/SignUp.cshtml
+++ b/PFD_Assignment/Views/Home/SignUp.cshtml
@@ -25,8 +25,8 @@
                           class="text-danger"></span>
                 </div>
                 <div class="field input-field">
-                    <input asp-for="Password" type="text" placeholder="Set password">
-                    <span asp-validation-for="Password"
+                    <input asp-for="UserPassword" type="text" placeholder="Set password">
+                    <span asp-validation-for="UserPassword"
                           class="text-danger"></span>
                 </div>
                 <div class="field input-field">
