--- a/PFD_Assignment/Views/Home/SignUp.cshtml
+++ b/PFD_Assignment/Views/Home/SignUp.cshtml
@@ -4,41 +4,40 @@
     ViewData["Title"] = "Sign Up";
 }
 
+
 <section class="login-forms-container">
     <div class="form login">
         <div class="form-content">
             <header>Sign Up</header>
             <form id="login-form" asp-action="SignUp">
                 <div class="field input-field">
-                    <input asp-for="FirstName" type="text" placeholder="First Name">
+                    <input asp-for="FirstName" type="text" placeholder="First Name" required>
                     <span asp-validation-for="FirstName"
                           class="text-danger"></span>
                 </div>
                 <div class="field input-field">
-                    <input asp-for="LastName" type="text" placeholder="Last Name">
+                    <input asp-for="LastName" type="text" placeholder="Last Name" required>
                     <span asp-validation-for="LastName"
                           class="text-danger"></span>
                 </div>
                 <div class="field input-field">
-                    <input asp-for="Username" type="text" placeholder="Username" />
+                    <input asp-for="Username" type="text" placeholder="Username" required>
                     <span asp-validation-for="Username"
                           class="text-danger"></span>
                 </div>
                 <div class="field input-field">
-                    <input asp-for="UserPassword" type="text" placeholder="Set password">
+                    <input asp-for="UserPassword" type="text" placeholder="Set password" required>
                     <span asp-validation-for="UserPassword"
                           class="text-danger"></span>
                 </div>
                 <div class="field input-field">
-                    <input asp-for="Email" type="email" placeholder="Email">
+                    <input asp-for="Email" type="email" placeholder="Email" required>
                     <span asp-validation-for="Email"
                           class="text-danger"></span>
                 </div>
                 <div class="field input-field">
                     <input asp-for="BirthDate" placeholder="Date of Birth"
-                           max="@DateTime.Today.ToString("yyyy-MM-dd")" />
-                    <span asp-validation-for="BirthDate"
-                          class="text-danger"></span>
+                           max="@DateTime.Today.ToString("yyyy-MM-dd")" required />
                 </div>
 
                 <div class="field button-field">
@@ -52,5 +51,3 @@
     </div>
 </section>
 <img class="bgimg" src="~/images/sgbackground.jpg"></img>
-
-
