--- a/PFD_Assignment/Views/Home/Index.cshtml
+++ b/PFD_Assignment/Views/Home/Index.cshtml
@@ -14,6 +14,24 @@
 
         </div>
     </div>
+    <div class="aboutUs" id ="aboutUs">
+        <div class="content">
+            <b>
+                <h2 id="title" class="title">About Us</h2>
+                <p class="aboutPara">
+                    We are SG Handbook, a one stop web portal application that aims to help you answer any questions you may have.
+                </p>
+                <h3 id="title" class="title">Contact</h3>
+                <p class="aboutContact">
+                    (+65) 9999 9999
+                </p>
+                <h3 id="title" class="title">Email</h3>
+                <p class="aboutEmail">
+                    SGHandbook@gmail.com 
+                </p>
+            </b>
+        </div>
+    </div>
 </body>
 </html>
 
