--- a/PFD_Assignment/Views/Shared/_DefaultMenu.cshtml
+++ b/PFD_Assignment/Views/Shared/_DefaultMenu.cshtml
@@ -26,7 +26,7 @@
                     </a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="~/Home/AboutUs">
+                    <a class="nav-link" href="#aboutUs">
                         About Us
                     </a>
                 </li>
@@ -36,7 +36,7 @@
             <ul class="navbar-nav ms-auto">
                 <li class="nav-item">
                     <!-- A link for logging out user -->
-                    <a class="nav-link" href="~/Home/LoginPage">Login</a>
+                    <a class="nav-link" href="~/Home/LoginPage">Login/Sign Up</a>
                 </li>
             </ul>
         </div>
