--- a/PFD_Assignment/Views/Shared/_Mainpage.cshtml
+++ b/PFD_Assignment/Views/Shared/_Mainpage.cshtml
@@ -26,7 +26,7 @@
                     </a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#aboutUs">
+                    <a class="nav-link" href="~/Home/Index#aboutUs">
                         About Us
                     </a>
                 </li>
