--- a/PFD_Assignment/Views/Shared/_DefaultMenu.cshtml
+++ b/PFD_Assignment/Views/Shared/_DefaultMenu.cshtml
@@ -1,5 +1,4 @@
-﻿<script src = "site.js"></script>
-<nav class="navbar navbar-expand-md bg-light navbar-light">
+﻿<nav class="navbar navbar-expand-md bg-light navbar-light">
     <div class="container-fluid" id ="navbar">
         <!-- The brand(or icon) of the navbar -->
         <a class="navbar-brand" href="~/Home/Index"
