--- a/PFD_Assignment/Views/Guide/_ViewGuides.cshtml
+++ b/PFD_Assignment/Views/Guide/_ViewGuides.cshtml
@@ -6,7 +6,7 @@
 <div>
     @using (Html.BeginForm("Index","Guide",FormMethod.Post))
     {
-        <table>
+        <table id="Post">
             <tr>
                 <td>
                     <span><b></b>Search By:</span>
