post vm, trying to reformat guide design

--- a/PFD_Assignment/Views/Guide/Index.cshtml
+++ b/PFD_Assignment/Views/Guide/Index.cshtml
@@ -1,6 +1,4 @@
-﻿@model IEnumerable<PFD_Assignment.Models.Post>
-
-
+﻿@model IEnumerable<PFD_Assignment.Models.PostViewModel>
 
 @{
     ViewData["Title"] = "Index";
