--- a/PFD_Assignment/Views/Shared/_Layout.cshtml.css
+++ b/PFD_Assignment/Views/Shared/_Layout.cshtml.css
@@ -41,9 +41,15 @@ button.accept-policy {
 
 
 .footer {
-  position: absolute;
-  bottom: 0;
-  width: 100%;
-  white-space: nowrap;
-  line-height: 60px;
+    position: absolute;
+    bottom: 0;
+    width: 100%;
+    white-space: nowrap;
+    line-height: 60px;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+    text-align: center;
 }
+
+
