--- a/PFD_Assignment/Views/Home/Index.cshtml
+++ b/PFD_Assignment/Views/Home/Index.cshtml
@@ -29,6 +29,8 @@
                 <p class="aboutEmail">
                     SGHandbook@gmail.com 
                 </p>
+                <button type="button" onclick="callOpenAIModel()">Test</button>
+                <button onclick="showMessage()">Show Message</button>
             </b>
         </div>
     </div>
