added test box for pop ups after success/failure

--- a/PFD_Assignment/Views/Home/Index.cshtml
+++ b/PFD_Assignment/Views/Home/Index.cshtml
@@ -30,7 +30,7 @@
                     SGHandbook@gmail.com 
                 </p>
                 <button type="button" onclick="callOpenAIModel()">Test</button>
-                
+                <button onclick="showMessage()">Show Message</button>
             </b>
         </div>
     </div>
