created profile and changed description slightly

--- a/PFD_Assignment/Views/Home/Index.cshtml
+++ b/PFD_Assignment/Views/Home/Index.cshtml
@@ -8,8 +8,8 @@
         <img class="bgimg" src="~/images/sgbackground.jpg"></img>
         <div class="content">
             <h2 id="title" class="title">Welcome to SG Handbook</h2>
-            <p class="para">
-                description
+            <p class="para" , style="font-weight: bold;">
+                You have questions, we have the answers
             </p>
 
         </div>
