--- a/PFD_Assignment/Views/Home/Mainpage.cshtml
+++ b/PFD_Assignment/Views/Home/Mainpage.cshtml
@@ -1,7 +1,44 @@
 ﻿@{
 ViewData["Title"] = "MainPage";
 }
-<img id="imgMainPic" src="~/images/logo.jpg"
-class="img-fluid" style="display:block; margin:auto;" />
+<!DOCTYPE html>
+<html>
+<body>
+    <div class="home">
+        <img class="bgimg" src="~/images/sgbackground.jpg"></img>
+        <div class="content">
+            <h2 id="title" class="title">Welcome to SG Handbook</h2>
+            <p class="para", style="font-weight: bold;">
+                You have questions, we have the answers
+            </p>
 
+        </div>
+    </div>
+    <div class="aboutUs" id="aboutUs">
+        <div class="content">
+            <b>
+                <h2 id="title" class="title">About Us</h2>
+                <p class="aboutPara">
+                    We are SG Handbook, a one stop web portal application that aims to help you answer any questions you may have.
+                </p>
+                <h3 id="title" class="title">Contact</h3>
+                <p class="aboutContact">
+                    (+65) 9999 9999
+                </p>
+                <h3 id="title" class="title">Email</h3>
+                <p class="aboutEmail">
+                    SGHandbook@gmail.com
+                </p>
+            </b>
+        </div>
+    </div>
+</body>
+</html>
+
+@if (TempData["SuccessMessage"] != null)
+{
+    <script>
+        alert('@TempData["SuccessMessage"]');
+    </script>
+}
 
