--- a/PFD_Assignment/wwwroot/css/site.css
+++ b/PFD_Assignment/wwwroot/css/site.css
@@ -188,6 +188,332 @@ body {
 }
 
 .login {
+    html
+
+{
+    font-size: 14px;
+}
+
+@media (min-width: 768px) {
+    html {
+        font-size: 16px;
+    }
+
+    .aboutUs {
+        width: 100%;
+        height: auto;
+        padding: 20px;
+        border-radius: 0px;
+    }
+
+    .aboutPara, .aboutContact, .aboutEmail {
+        font-size: 25px;
+    }
+}
+
+html {
+    position: relative;
+    min-height: 100%;
+    scroll-behavior: smooth;
+}
+
+body {
+    margin-bottom: 60px;
+}
+
+/* --------------------------- guides -------------------------------*/
+.guidecontent {
+    align-items: center;
+    justify-content: center;
+}
+
+.guides {
+    display: flex;
+    flex: initial;
+    flex-wrap: wrap;
+    flex-direction: row;
+    width: 100%;
+    height: auto;
+    padding: 30px;
+    border-radius: 8vh;
+    /* Maintain 50% opacity for the background rectangle */
+    background-color: gainsboro; /*rgba(112, 128, 144, 0.5);*/
+    margin-top: 20px;
+    justify-content: space-between; /* Push the button to the right */
+}
+
+.guideUser, .guidePara {
+    font-size: 16px;
+    letter-spacing: 0.01cm;
+}
+
+    .guidePara:nth-child(2) { /*for first (title) para */
+        font-size: 28px;
+        font-weight: bold;
+    }
+
+    .guidePara:nth-child(3) { /*for second (description) para */
+        font-size: 20px;
+        font-weight: normal;
+    }
+
+
+.guideVotes {
+    font-size: 14px;
+    letter-spacing: 0.01cm;
+    color: dimgrey;
+}
+
+.guidebuttonposition {
+    padding: 20px; /* Adjust as needed */
+    object-position: left;
+}
+
+.guideButton {
+    border-radius: 3vh;
+    text-align: center;
+    background-color: ghostwhite;
+    height: 40px;
+    width: 150px;
+    margin-left: auto; /* Push button to right edge */
+    margin-right: 10px; /* Control spacing between button and right side */
+    transition: all 0.3s ease;
+    cursor: pointer;
+    position: relative;
+    left: 50%; /* Move button horizontally to centre of its containing element */
+    transform: translateX(-50%); /* Center horizontally */
+}
+
+    .guideButton:hover {
+        background-color: lightgrey;
+    }
+
+
+/* --------------------------- navbar -------------------------------*/
+.sticky {
+    position: fixed;
+    top: 0;
+    width: 100%;
+    z-index: 100;
+    background-color: white;
+}
+
+
+
+/* --------------------------- intro page -------------------------------*/
+
+.title {
+    color: black;
+}
+
+.home {
+    position: relative;
+    width: 100%;
+    height: 100vh;
+    background-position: center;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+    .home .content {
+        max-width: 600px;
+        color: black;
+    }
+
+.content h2 {
+    font-size: 55px;
+    letter-spacing: 0.03cm;
+}
+
+.content p {
+    margin: 10px 0 40px;
+}
+
+.content {
+    text-align: center;
+    align-items: center;
+    justify-content: center;
+}
+
+    .content h3 {
+        font-size: 40px;
+        letter-spacing: 0.03cm;
+        color: black;
+    }
+
+.aboutUs {
+    width: 100%;
+    height: auto;
+    padding: 20px;
+    border-radius: 8vh;
+    /* Maintain 50% opacity for the background rectangle */
+    background-color: rgba(112, 128, 144, 0.5);
+    margin-bottom: 80px;
+}
+
+    .aboutUs h2,
+    .aboutUs p,
+    .aboutUs h3 {
+        font-size: 35px;
+        color: black;
+    }
+
+/* ------------------- Profile page --------------------------------- */
+.myProfile {
+    width: 100%;
+    height: auto;
+    padding: 20px;
+    border-radius: 8vh;
+    /* Maintain 50% opacity for the background rectangle */
+    background-color: rgba(112, 128, 144, 0.5);
+    margin-bottom: 50px;
+    margin-top: 20px;
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+}
+
+    .myProfile h1 {
+        text-align: center;
+    }
+
+/* ------------------- LOGIN AND SIGN UP FORMS --------------------------------- */
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+    font-family: 'Poppins', sans-serif;
+}
+
+.login-forms-container {
+    height: 100vh;
+    width: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    column-gap: 30px;
+    z-index: -1;
+}
+
+.login {
+    position: absolute;
+    max-width: 430px;
+    width: 100%;
+    padding: 30px;
+    border-radius: 6px;
+    background: transparent;
+    backdrop-filter: blur(20px);
+    margin-top: 30px;
+    margin-bottom: 30px;
+}
+
+    .login .field {
+        position: relative;
+        height: 50px;
+        width: 100%;
+        margin-top: 20px;
+        border-radius: 6px;
+    }
+
+.field input,
+.field button {
+    height: 100%;
+    width: 100%;
+    border: none;
+    font-size: 16px;
+    font-weight: 400;
+    border-radius: 6px;
+}
+
+.field input {
+    outline: none;
+    padding: 0 15px;
+    border: 1px solid#CACACA;
+}
+
+    .field input:focus {
+        border-bottom-width: 2px;
+    }
+
+
+.field button {
+    color: #fff;
+    background-color: #0171d3;
+    transition: all 0.3s ease;
+    cursor: pointer;
+}
+
+    .field button:hover {
+        background-color: #016dcb;
+    }
+
+.form-link {
+    text-align: center;
+    margin-top: 10px;
+}
+
+    .form-link span,
+    .form-link a {
+        font-size: 14px;
+        font-weight: 400;
+        color: #232836;
+    }
+
+.form a {
+    color: #0171d3;
+    text-decoration: none;
+}
+
+.form-content a:hover {
+    text-decoration: underline;
+}
+
+.line {
+    position: relative;
+    height: 1px;
+    width: 100%;
+    margin: 36px 0;
+    background-color: #d4d4d4;
+}
+
+    .line::before {
+        content: 'Or';
+        position: absolute;
+        top: 50%;
+        left: 50%;
+        transform: translate(-50%, -50%);
+        background-color: #FFF;
+        color: #8b8b8b;
+        padding: 0 15px;
+    }
+
+
+@media screen and (max-width: 400px) {
+    .form {
+        padding: 20px 10px;
+    }
+}
+
+.bgimg {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    z-index: -1;
+    object-fit: cover;
+    opacity: 0.6;
+}
+
+.popup-message {
+    position: absolute;
+    bottom: 20px;
+    right: 20px;
+    padding: 10px;
+    background-color: #333;
+    color: #fff;
+    border-radius: 5px;
+}
+
     position: absolute;
     max-width: 430px;
     width: 100%;
