--- a/PFD_Assignment/Views/Home/Profile.cshtml
+++ b/PFD_Assignment/Views/Home/Profile.cshtml
@@ -3,7 +3,7 @@
 }
 <!DOCTYPE html>
 <html>
-<body style="background-color: lightgrey">
+<body style="background-color: white">
     <div class="myProfile" id="myProfile">
         <h1>My Profile</h1>
         <h3>Personal Details</h3>
