--- a/PFD_Assignment/Views/Home/Index.cshtml
+++ b/PFD_Assignment/Views/Home/Index.cshtml
@@ -29,7 +29,9 @@
                 <p class="aboutEmail">
                     SGHandbook@gmail.com 
                 </p>
+                <div id="apiKeyContainer" data-api-key="@ViewBag.ApiKey">
                 <button type="button" onclick="callOpenAIModel()">Test</button>
+                </div>
                 <button onclick="showMessage()">Show Message</button>
             </b>
         </div>
@@ -42,4 +44,13 @@
     <script>
         alert('@TempData["SuccessMessage"]');
     </script>
+}
+
+@if (@ViewBag.apiKey != null)
+{
+    Console.WriteLine(ViewBag.apiKey);
+}
+else
+{
+    Console.WriteLine("invalid");
 }
