--- a/PFD_Assignment/Views/Shared/_Layout.cshtml
+++ b/PFD_Assignment/Views/Shared/_Layout.cshtml
@@ -19,15 +19,16 @@
             @await Html.PartialAsync("_DefaultMenu.cshtml")
         }
     </header>
-    <div class="container">
+@*    <div class="container">
         
         <!-- 2nd row -->
-        <div class="row">
+      <div class="row">
             <div class="col-sm-12">
                 @RenderBody()
             </div>
         </div>
-    </div>
+    </div>*@
+    @RenderBody()
 
     <footer class="border-top footer text-muted">
         <div class="container">
