--- a/PFD_Assignment/Views/Guide/Index.cshtml
+++ b/PFD_Assignment/Views/Guide/Index.cshtml
@@ -8,6 +8,13 @@
     <div class="col-sm-3">
         <h2 style="padding-left: 10px;">Filter</h2>
         <hr style="border-top: dotted 1px; margin-left: 10px;" />
+        <a style=" "href="#" id="sort-newest">Sort Newest to Oldest</a> <br />
+
+        <a href="#" id="sort-oldest">Sort Oldest to Newest</a> <br />
+
+        <a href="#" id="sort-mostliked">Sort Most to Least Liked</a> <br />
+
+        <a href="#" id="sort-leastliked">Sort Least to Most Liked</a> <br />
 
     </div>
     <div class="col-sm-9">
