--- a/PFD_Assignment/Views/Guide/Create.cshtml
+++ b/PFD_Assignment/Views/Guide/Create.cshtml
@@ -35,7 +35,16 @@
 			</div>
 		</div>
 		
-		
+		<div class="row mb-3">
+			<label asp-for="fileToUpload"
+				   class="col-sm-3 col-form-label"></label>
+			<div class="col-sm-9 col-md-5">
+				<input asp-for="fileToUpload" class="form-control" style="height: 100px;" />
+				<span asp-validation-for="fileToUpload"
+					  class="text-danger"></span>
+			</div>
+		</div>
+
 		
 		<div class="row mb-3">
             <div class="col-sm-9 offset-sm-3">
