--- a/PFD_Assignment/Views/Shared/_Mainpage.cshtml
+++ b/PFD_Assignment/Views/Shared/_Mainpage.cshtml
@@ -1,4 +1,16 @@
-﻿<nav class="navbar navbar-expand-md bg-light navbar-light">
+﻿<head>
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>@ViewData["Title"] - SG HandBook</title>
+    <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
+    <link rel="stylesheet" href="~/css/site.css" asp-append-version="true" />
+    <link rel="stylesheet" href="~/PFD_Assignment.styles.css" asp-append-version="true" />
+    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
+</head>
+
+
+<nav class="navbar navbar-expand-md bg-light navbar-light">
     <div class="container-fluid" id="navbar">
         <!-- The brand(or icon) of the navbar -->
         <a class="navbar-brand" href="~/Home/Index"
