--- a/PFD_Assignment/wwwroot/css/site.css
+++ b/PFD_Assignment/wwwroot/css/site.css
@@ -712,3 +712,11 @@ body {
 .btn:hover {
     background-color: #e7e7e7;
 }
+
+/* edit profile */
+.modal-header .close {
+    padding: 5px; 
+    border: none;
+    background-color:transparent;
+    font-size: 20px;
+}
