--- a/PFD_Assignment/Views/Shared/_DefaultMenu.cshtml
+++ b/PFD_Assignment/Views/Shared/_DefaultMenu.cshtml
@@ -1,17 +1,18 @@
 ﻿<nav class="navbar navbar-expand-md bg-light navbar-light">
-    <div class="container-fluid" id ="navbar">
+    <div class="container-fluid" id="navbar">
         <!-- The brand(or icon) of the navbar -->
-        <a class="navbar-brand" href="~/Home/Index"
-            style="font-size:32px; font-weight:bold; color:firebrick;">
+        <a class="navbar-brand" style="font-size: 32px; font-weight: bold; color: firebrick;" href="~/Home/Index">
+            <img class="navimg" src="~/images/sgbook.jpg" width="50" height=auto style="margin-bottom:13px;" alt="SG Handbook Logo"> <!--style="vertical-align: text-bottom;"-->
             SG Handbook
         </a>
+
         <!-- Toggle/collapsible Button, also known as hamburger button -->
         <button class="navbar-toggler" type="button"
                 data-bs-toggle="collapse" data-bs-target="#IndexNavbar">
             <span class="navbar-toggler-icon"></span>
         </button>
         <!-- Links in navbar, displayed as drop-down list when collapsed -->
-        <div class="collapse navbar-collapse" id="IndexNavbar">
+        <div class="collapse navbar-collapse" id="IndexNavbar" style="font-size:20px;">
             <!-- Links that are aligned to the left,
             me-auto: margin-end, i.e., right margin, auto-adjusted -->
             <ul class="navbar-nav me-auto">
