--- a/PFD_Assignment/wwwroot/css/site.css
+++ b/PFD_Assignment/wwwroot/css/site.css
@@ -168,9 +168,8 @@ body {
     top: 0;
     width: 100%;
     z-index: 100;
-    background-color: white;
+    background-color: ghostwhite;
 }
-
 
 
 /* --------------------------- intro page -------------------------------*/
@@ -301,8 +300,7 @@ body {
     height: auto;
     padding: 30px;
     border-radius: 8vh;
-    /* Maintain 50% opacity for the background rectangle */
-    background-color: gainsboro; /*rgba(112, 128, 144, 0.5);*/
+    background-color: gainsboro; 
     margin-top: 20px;
     justify-content: space-between; /* Push the button to the right */
 }
@@ -352,16 +350,6 @@ body {
     .guideButton:hover {
         background-color: lightgrey;
     }
-
-
-/* --------------------------- navbar -------------------------------*/
-.sticky {
-    position: fixed;
-    top: 0;
-    width: 100%;
-    z-index: 100;
-    background-color: white;
-}
 
 
 
@@ -719,4 +707,8 @@ body {
     border: none;
     background-color:transparent;
     font-size: 20px;
+}
+
+.navimg{
+    font-size:10px;
 }
