saving img into db wip (47.07)

--- a/PFD_Assignment/Views/Guide/GuideDetails.cshtml
+++ b/PFD_Assignment/Views/Guide/GuideDetails.cshtml
@@ -14,7 +14,8 @@
     <hr />
              
     <div class="postphoto">
-        <img src="~/images/@Model.Photo" />
+        <img src="@Url.Content("~/UploadedImages/" + Model.postFileName)"
+        <!--<img src="~/images/@Model.Photo" />-->
     </div>
 
     <div class="postcontent">
