--- a/PFD_Assignment/Views/Guide/Create.cshtml
+++ b/PFD_Assignment/Views/Guide/Create.cshtml
@@ -39,7 +39,7 @@
 			<label asp-for="fileToUpload"
 				   class="col-sm-3 col-form-label"></label>
 			<div class="col-sm-9 col-md-5">
-				<input asp-for="fileToUpload" class="form-control" style="height: 100px;" />
+				<input type="file" asp-for="fileToUpload" class="form-control" style="height: 100px;" />
 				<span asp-validation-for="fileToUpload"
 					  class="text-danger"></span>
 			</div>
