--- a/PFD_Assignment/wwwroot/css/site.css
+++ b/PFD_Assignment/wwwroot/css/site.css
@@ -720,3 +720,34 @@ body {
     background-color:transparent;
     font-size: 20px;
 }
+
+.container10 {
+    width: 600px;
+    border: 2px solid #333;
+    padding: 15px 10px;
+}
+
+.container10 h2 {
+    text-align: center;
+    margin-bottom: 15px
+}
+
+textarea {
+    height: 20px;
+    width: 100%;
+    border: none;
+    border-bottom: 2px solid #aaa;
+    background-color: transparent;
+    margin-bottom: 10px;
+    resize: none;
+    outline: none;
+    transition: .5s
+}
+
+.interactive-container {
+    width: 200px;
+    height: 200px;
+    background-color: lightblue;
+    display: none; /* Initially hide the container */
+    position: absolute;
+}
